--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,15 @@ x-common:
     # Uncomment the line below and set to a non-empty value if you want to use Let's Encrypt
     # to generate an SSL certificate for the Panel.
     # LE_EMAIL: ""
-#
-#  mail:
-#    &mail-environment
-#    MAIL_FROM: "noreply@example.com"
-#    MAIL_DRIVER: "smtp"
-#    MAIL_HOST: "mail"
-#    MAIL_PORT: "1025"
-#    MAIL_USERNAME: ""
-#    MAIL_PASSWORD: ""
-#    MAIL_ENCRYPTION: "true"
+  mail:
+    &mail-environment
+    MAIL_FROM: "noreply@example.com"
+    MAIL_DRIVER: "smtp"
+    MAIL_HOST: "mail"
+    MAIL_PORT: "1025"
+    MAIL_USERNAME: ""
+    MAIL_PASSWORD: ""
+    MAIL_ENCRYPTION: "true"
 
 services:
   database:
