Change email to gmail

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,13 +17,13 @@ x-common:
     # LE_EMAIL: ""
   mail:
     &mail-environment
-    MAIL_FROM: "noreply@example.com"
+    MAIL_FROM: "your-gmail-email@gmail.com"
     MAIL_DRIVER: "smtp"
-    MAIL_HOST: "mail"
-    MAIL_PORT: "1025"
-    MAIL_USERNAME: ""
-    MAIL_PASSWORD: ""
-    MAIL_ENCRYPTION: "true"
+    MAIL_HOST: "smtp.gmail.com"
+    MAIL_PORT: "587"
+    MAIL_USERNAME: "your-gmail-email@gmail.com"
+    MAIL_PASSWORD: "your-gmail-password"
+    MAIL_ENCRYPTION: "tls"
 
 services:
   database:
